--- a/source/stylesheets/bbl-basic.css.scss
+++ b/source/stylesheets/bbl-basic.css.scss
@@ -107,22 +107,27 @@ body {
 }
 
 
-// left-right split alignment.
 .menu {
 	position:fixed; 
+	top:0px; left:0px;
 	background:rgba(0,0,0,0.25);
-	width: 100%; top:0px; left:0px;
+	width: 100%; 
+
+	// left-right split alignment.
+	text-align: justify;
+
 	.home-button {
 		display: inline-block;
 		margin:20px 0 0 10px;
 	}
-	.page-menu {float:right;
+	.page-menu {
 		margin:35px 20px 0 0;
 		display: inline-block;
 	}
 	.page-menu a {color:white;}
 	.page-menu a:hover {color:#FFCC99;}
 }
+// left-right split alignment.
 .menu::after {
 	content: "";
 	width: 100%;
