prepare bbl-middleman staging.

--- a/source/onehour/index.html.haml
+++ b/source/onehour/index.html.haml
@@ -8,7 +8,8 @@ uservoice_category: 67220
 
 menu: 
 # product-scope
-# - label: View on App Store
+- label: View on App Store
+  href: http://appstore.com/onehour
 # - label: Features
 # - label: Tips
 
@@ -50,7 +51,7 @@ sections:
   sections:
   - role: download
     title: Available on the App Store.
-    href: https://itunes.apple.com/gb/app/onehour/id643538078?mt=8
+    href: http://appstore.com/onehour
     img: Available_on_the_App_Store_Badge_US-UK_135x40.svg
 
 ---
