fix OneHour buy button link by changing vanity url to store url.

--- a/source/onehour/index.html.haml
+++ b/source/onehour/index.html.haml
@@ -9,7 +9,7 @@ uservoice_category: 67220
 menu: 
 # product-scope
 - label: View on App Store
-  href: http://appstore.com/onehour
+  href: ./buy
 # - label: Features
 # - label: Tips
 
@@ -51,7 +51,7 @@ sections:
   sections:
   - role: download
     title: Available on the App Store.
-    href: http://appstore.com/onehour
+    href: ./buy
     img: Available_on_the_App_Store_Badge_US-UK_135x40.svg
 
 ---
