s/OS X/macOS/g; add description to webbuddy page; misc wording tweak;

--- a/source/webbuddy/index.html.haml
+++ b/source/webbuddy/index.html.haml
@@ -1,6 +1,7 @@
 ---
 title: WebBuddy
-subtitle: Minimalistic web client for OS X
+subtitle: Minimalistic web client for macOS
+description: Minimalistic web client for macOS
 
 stylesheet: webbuddy.css
 google_analytics_id: UA-32373633-2
@@ -23,7 +24,7 @@ sections:
 - 
   role: title
   title: WebBuddy
-  subtitle: Minimalistic&nbsp;web&nbsp;client for&nbsp;OS&nbsp;X
+  subtitle: Minimalistic&nbsp;web&nbsp;client for&nbsp;macOS
   subimg: webbuddy/webbuddy-icon.png
 - 
   role: tagline
@@ -46,7 +47,7 @@ sections:
 
       Working with links within your workflow and mental context reduces clutter in your main browser.
 
-      Preview links from OS X Mail, Twitter or Evernote quickly and without distraction -- keep your focus on the current working context. Hit the Escape key to go right back to where you were.
+      Preview links from macOS Mail, Twitter or Evernote quickly and without distraction -- keep your focus on the current working context. Hit the Escape key to go right back to where you were.
 
 
 
@@ -56,7 +57,7 @@ sections:
 
       ### Designed to reduce clutter.
 
-      Enjoy far fewer tabs in your browsers. Spend less time switching between apps and browsers.
+      Enjoy far fewer tabs in your main browser. Spend less time juggling your app and browser windows.
 
 
 %section
