tactically fix page title section being obscured by sticky header.

--- a/source/stylesheets/webbuddy.css.scss
+++ b/source/stylesheets/webbuddy.css.scss
@@ -27,6 +27,8 @@ section.title {
 
 	max-width: 500px;  // ?? can this kind of constraining be done relative to inner elements?
 
+	margin-top: 97px; // clear the sticky header
+
 	.title {
 		display: inline;
 
