Xcode commit checkpoint.

--- a/source/consulting/index.mdown.erb
+++ b/source/consulting/index.mdown.erb
@@ -1,4 +1,8 @@
 ---
+# FIXME way too outdated -- update with a less specific, higher-value pitch.
+# or just get rid of.
+
+
 title: Work with Us!
 subtitle: Big Bear Labs Consulting Services
 
