--- a/source/webbuddy/index.html.haml
+++ b/source/webbuddy/index.html.haml
@@ -1,4 +1,6 @@
 ---
+# FIXME anchor images are all gone! page looks too text-heavy.
+
 title: WebBuddy
 subtitle: Minimalistic web client for macOS
 description: Minimalistic web client for macOS
