--- a/source/consulting/index.mdown.erb
+++ b/source/consulting/index.mdown.erb
@@ -2,6 +2,7 @@
 # FIXME way too outdated -- update with a less specific, higher-value pitch.
 # or just get rid of.
 
+# FIXME check all usages of dashes, esp. en dashes and replace w/ em dashes.
 
 title: Work with Us!
 subtitle: Big Bear Labs Consulting Services
