--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -40,7 +40,7 @@ sections:
   role: blog
   title: Blog
   href: http://blog.bigbearlabs.com
-  subtitle: Lastest banter.
+  subtitle: Latest banter.
 
 ---
 
