fix all em-dashes

--- a/source/consulting/index.mdown.erb
+++ b/source/consulting/index.mdown.erb
@@ -44,7 +44,7 @@ Let us help you leverage your web programming expertise, to rapidly  build out n
 
 WebKit lets your app leverage a decade of hard work from the open source community and major browser vendors. It allows your app to tap into vast amounts of content already available on the web, and minimises platform risk for new content for your software product.
 
-It's also far from trivial to work with -- WebKit integration is its own art with a sizable learning curve and subtle gotchas. It's only fair -- it's the result of a decade's worth of real-world engineering.
+It's also far from trivial to work with --- WebKit integration is its own art with a sizable learning curve and subtle gotchas. It's only fair --- it's the result of a decade's worth of real-world engineering.
 
 Focus on the features that make your app unique. Leave us with nitty-gritty of making your app's in-app browser or other WebKit-based features.
 
