--- a/source/webbuddy/articles/bookmarking/index.md.erb
+++ b/source/webbuddy/articles/bookmarking/index.md.erb
@@ -12,6 +12,6 @@ If your bookmark folders are so messy you're irritated you even have to think ba
 
 We don't. That's why we're building [WebBuddy 2](http://alpha.webbuddyapp.com). Bookmarks were fine things when they worked. But, in this day and age, bookmarks should be laid to rest.
 
-If you'd like to learn more, please register to be notified when WebBuddy's mission statement is ready. Until then, our apologies for having to make you put the pieces of our story together -- it's because we're hard at work building stuff.
+If you'd like to learn more, please register to be notified when WebBuddy's mission statement is ready. Until then, our apologies for having to make you put the pieces of our story together --- it's because we're hard at work building stuff.
 
 <%= partial "partials/notify-me" %>
