--- a/source/researches/index.mdown.erb
+++ b/source/researches/index.mdown.erb
@@ -76,7 +76,7 @@ WebBuddy browser extensions will import your browser sessions, creating a comple
 
 ## Feature pipeline
 
-### Highlights -- keep just what you want.
+### Highlights --- keep just what you want.
 
 [TODO description]
 [video]
@@ -119,7 +119,7 @@ WebBuddy browser extensions will import your browser sessions, creating a comple
     #{ image_tag("stub-img.png", width:300, height:150) }
 
 
-### Coming soon -- your research accessible from anywhere.
+### Coming soon --- your research accessible from anywhere.
 [TODO description]
 [video]
 {:.draft}
