--- a/source/webbuddy/articles/browser-babysitting/index.md.erb
+++ b/source/webbuddy/articles/browser-babysitting/index.md.erb
@@ -2,7 +2,7 @@
 
 What is browser babysitting? 
 
-It's the thing you're used to as an intense user of the web -- the careful choreographing of the tabs in your browser windows; the constant decision-making of whether you should bookmark this, close this page or get rid of this window, or leave it for later, deciding what to save for later, where to save it, then doing it.
+It's the thing you're used to as an intense user of the web --- the careful choreographing of the tabs in your browser windows; the constant decision-making of whether you should bookmark this, close this page or get rid of this window, or leave it for later, deciding what to save for later, where to save it, then doing it.
 
 You know you have to do it carefully, else there will be consequences. Like dealing with the *tab clutter monster*, or not being able to find something you need later when you need it again.
 
