--- a/source/webbuddy/articles/redundant-searches/index.md.erb
+++ b/source/webbuddy/articles/redundant-searches/index.md.erb
@@ -2,7 +2,7 @@
 
 You know, when you Google something, then refine your search terms (aka [pearl growing](http://en.wikipedia.org/wiki/Pearl_growing)), then follow a long trail in the quest for true relevance. You got to that hard-to-get and important thing you were hunting down. Yay!
 
-The next time you search for this though -- that's when your efforts are redundant. Recall *exactly* the right search terms. Trace *exactly* the same steps. Pray that Google's world view didn't change too much.
+The next time you search for this though --- that's when your efforts are redundant. Recall *exactly* the right search terms. Trace *exactly* the same steps. Pray that Google's world view didn't change too much.
 
 Why, we ask, is such recurrent pain necessary? You've already worked hard once to find that information. Do you *have* to work so hard again to find the same stuff later?
 
