override default description.

--- a/source/consulting/index.mdown.erb
+++ b/source/consulting/index.mdown.erb
@@ -1,11 +1,13 @@
 ---
-# FIXME way too outdated -- update with a less specific, higher-value pitch.
+# FIXME way too outdated --- update with a less specific, higher-value pitch.
 # or just get rid of.
 
 # FIXME check all usages of dashes, esp. en dashes and replace w/ em dashes.
 
 title: Work with Us!
 subtitle: Big Bear Labs Consulting Services
+description: Big Bear Labs Consulting Services
+
 
 stylesheet: producteevly.css
 google_analytics_id: 
